# nRF52840_BLE_Temperature_Node

./: .gitignore  CMakeLists.txt  README.md  prj.conf
inc/: app_timer.h  ble_service.h  temp_sensor.h
src/: app_timer.c  ble_service.c  main.c  temp_sensor.c
